Sutter Health/src/objects/TimeCard__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Punch_Time__c</fullName>
        <label>In Punch Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Punch_Time__c</fullName>
        <label>Out Punch Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_HOL__c</fullName>
        <label>PTO/HOL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeCardId__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>TimeCards</relationshipLabel>
        <relationshipName>TimeCards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TimeCard</label>
    <nameField>
        <displayFormat>TC# {00000000}</displayFormat>
        <label>TimeCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>